frameworks/backend/redis/content/develop/ai/redisvl/0.11.0/user_guide/_index.md
---
type: "Framework Learn Page"
framework: "Redis"
source_repo: "https://github.com/redis/docs.git"
source_branch: "main"
source_path: "content/develop/ai/redisvl/0.11.0/user_guide/_index.md"
source_commit: "f8693349287b0efbef3c865b6f6a2aceca88594d"
source_commit_short: "f869334"
source_commit_date: "2026-08-28T10:01:19-05:00"
generated_at: "2026-08-29T09:38:55.993768Z"
---
# _Index

---
linkTitle: User guides
title: User Guides
weight: 4
hideListLinks: true
url: '/develop/ai/redisvl/0.11.0/user_guide/'
---


User guides provide helpful resources for using RedisVL and its different components.



* [Getting Started with RedisVL](getting_started/)
  * [Define an `IndexSchema`](getting_started/#define-an-indexschema)
  * [Sample Dataset Preparation](getting_started/#sample-dataset-preparation)
  * [Create a `SearchIndex`](getting_started/#create-a-searchindex)
  * [Inspect with the `rvl` CLI](getting_started/#inspect-with-the-rvl-cli)
  * [Load Data to `SearchIndex`](getting_started/#load-data-to-searchindex)
  * [Creating `VectorQuery` Objects](getting_started/#creating-vectorquery-objects)
  * [Using an Asynchronous Redis Client](getting_started/#using-an-asynchronous-redis-client)
  * [Updating a schema](getting_started/#updating-a-schema)
  * [Check Index Stats](getting_started/#check-index-stats)
  * [Cleanup](getting_started/#cleanup)
* [Querying with RedisVL](hybrid_queries/)
  * [Hybrid Queries](hybrid_queries/#hybrid-queries)
  * [Combining Filters](hybrid_queries/#combining-filters)
  * [Non-vector Queries](hybrid_queries/#non-vector-queries)
  * [Count Queries](hybrid_queries/#count-queries)
  * [Range Queries](hybrid_queries/#range-queries)
  * [Advanced Query Modifiers](hybrid_queries/#advanced-query-modifiers)
* [LLM Caching](llmcache/)
  * [Initializing `SemanticCache`](llmcache/#initializing-semanticcache)
  * [Basic Cache Usage](llmcache/#basic-cache-usage)
  * [Customize the Distance Threshold](llmcache/#customize-the-distance-threshold)
  * [Utilize TTL](llmcache/#utilize-ttl)
  * [Simple Performance Testing](llmcache/#simple-performance-testing)
  * [Cache Access Controls, Tags & Filters](llmcache/#cache-access-controls-tags-filters)
* [Vectorizers](vectorizers/)
  * [Creating Text Embeddings](vectorizers/#creating-text-embeddings)
  * [Search with Provider Embeddings](vectorizers/#search-with-provider-embeddings)
  * [Selecting your float data type](vectorizers/#selecting-your-float-data-type)
* [Hash vs JSON Storage](hash_vs_json/)
  * [Hash or JSON – how to choose?](hash_vs_json/#hash-or-json-how-to-choose)
  * [Cleanup](hash_vs_json/#cleanup)
* [Working with nested data in JSON](hash_vs_json/#working-with-nested-data-in-json)
  * [Full JSON Path support](hash_vs_json/#full-json-path-support)
  * [As an example:](hash_vs_json/#as-an-example)
* [Rerankers](rerankers/)
  * [Simple Reranking](rerankers/#simple-reranking)
* [LLM Message History](message_history/)
  * [Managing multiple users and conversations](message_history/#managing-multiple-users-and-conversations)
  * [Semantic message history](message_history/#semantic-message-history)
  * [Conversation control](message_history/#conversation-control)
* [Semantic Routing](semantic_router/)
  * [Define the Routes](semantic_router/#define-the-routes)
  * [Initialize the SemanticRouter](semantic_router/#initialize-the-semanticrouter)
  * [Simple routing](semantic_router/#simple-routing)
  * [Update the routing config](semantic_router/#update-the-routing-config)
  * [Router serialization](semantic_router/#router-serialization)
  * [Add route references](semantic_router/#add-route-references)
  * [Get route references](semantic_router/#get-route-references)
  * [Delete route references](semantic_router/#delete-route-references)
  * [Clean up the router](semantic_router/#clean-up-the-router)
* [SVS-VAMANA Vector Search](svs_vamana/)
  * [Prerequisites](svs_vamana/#prerequisites)
  * [Quick Start with CompressionAdvisor](svs_vamana/#quick-start-with-compressionadvisor)
  * [Creating an SVS-VAMANA Index](svs_vamana/#creating-an-svs-vamana-index)
  * [Loading Sample Data](svs_vamana/#loading-sample-data)
  * [Performing Vector Searches](svs_vamana/#performing-vector-searches)
  * [Understanding Compression Types](svs_vamana/#understanding-compression-types)
  * [Compression Types Explained](svs_vamana/#compression-types-explained)
  * [Hybrid Queries with SVS-VAMANA](svs_vamana/#hybrid-queries-with-svs-vamana)
  * [Performance Monitoring](svs_vamana/#performance-monitoring)
  * [Manual Configuration (Advanced)](svs_vamana/#manual-configuration-advanced)
  * [Best Practices and Tips](svs_vamana/#best-practices-and-tips)
  * [Cleanup](svs_vamana/#cleanup)
* [Caching Embeddings](embeddings_cache/)
  * [Setup](embeddings_cache/#setup)
  * [Initializing the EmbeddingsCache](embeddings_cache/#initializing-the-embeddingscache)
  * [Basic Usage](embeddings_cache/#basic-usage)
  * [Advanced Usage](embeddings_cache/#advanced-usage)
  * [Async Support](embeddings_cache/#async-support)
  * [Real-World Example](embeddings_cache/#real-world-example)
  * [Performance Benchmark](embeddings_cache/#performance-benchmark)
  * [Common Use Cases for Embedding Caching](embeddings_cache/#common-use-cases-for-embedding-caching)
  * [Cleanup](embeddings_cache/#cleanup)
  * [Summary](embeddings_cache/#summary)
* [Advanced Query Types](advanced_queries/)
  * [Setup and Data Preparation](advanced_queries/#setup-and-data-preparation)
  * [Define the Schema](advanced_queries/#define-the-schema)
  * [Create Index and Load Data](advanced_queries/#create-index-and-load-data)
  * [1. TextQuery: Full Text Search](advanced_queries/#textquery-full-text-search)
  * [2. AggregateHybridQuery: Combining Text and Vector Search](advanced_queries/#aggregatehybridquery-combining-text-and-vector-search)
  * [3. MultiVectorQuery: Multi-Vector Search](advanced_queries/#multivectorquery-multi-vector-search)
  * [Comparing Query Types](advanced_queries/#comparing-query-types)
  * [Best Practices](advanced_queries/#best-practices)
